<?xml version="1.0" encoding="utf-8"?>

<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="#3b3b3b">
	 
	    <TextView
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:textSize="15sp"
	     android:layout_marginTop="20dip"
	     android:id="@+id/emailTextView"/>
	    
	    <TextView
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:textSize="15sp"
	     android:layout_marginTop="20dip"
	     android:text="@string/notifications"
	     android:id="@+id/notifications"/>
	
	    
	    <TextView
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:textSize="15sp"
	     android:text="@string/noNotifications"
	     android:id="@+id/notificationsSummary"/>
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dip" >
		
		    <ImageView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:adjustViewBounds="true"
		        android:contentDescription="@string/bb"
		        android:src="@drawable/big_ben" />
		
		    <ImageView
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1.00"
		        android:adjustViewBounds="true"
		        android:contentDescription="@string/TS"
		        android:src="@drawable/th" />
		</LinearLayout>
	
	    <Button
	        android:id="@+id/discover"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="55dip"
	        android:background="@null"
	        android:gravity="center"
	        android:text="@string/discover"
	        android:textSize="15sp" />
	 
	    <Button android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/logout"
	        android:textSize="20sp"
	        android:textColor="#21dbd4"
	        android:textStyle="bold"
	        android:id="@+id/btnLogout"
	        android:layout_marginTop="80dip"
	        android:background="@null" />
	 
	</LinearLayout>
</ScrollView>